--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
             <li>
               <p>
-                <b>Bike:{bikeCount} </b> &emsp;
+                <b>Bike{bikeCount} </b> &emsp;
                 {/* Add increase and decrease count buttons here */}
                 <button onClick={()=>{handleIncrease("bike")}}>Increase </button>&nbsp;&nbsp;
                 <button onClick={()=>{handleDecrease("bike")}}> decrease</button>&nbsp;&nbsp;
